// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard test should render correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        IPhone 14 Pro
      </h2>
      <div
        class="product-card__description"
      >
        Latest iphone, buy it now
      </div>
      <h1
        class="product-card__price"
      >
        999 $
      </h1>
      <div
        class="product-card__category"
      >
        Электроника
      </div>
    </div>
    <img
      alt="IPhone 14 Pro"
      class="product-card__image"
      src="/iphone.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render product correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Принтер
      </h2>
      <div
        class="product-card__description"
      >
        Незаменимая вещь для студента
      </div>
      <h1
        class="product-card__price"
      >
        7 000 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Электроника
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render product with image correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        IPhone 14 Pro
      </h2>
      <div
        class="product-card__description"
      >
        Latest iphone, buy it now
      </div>
      <h1
        class="product-card__price"
      >
        999 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Электроника
      </div>
    </div>
    <img
      alt="IPhone 14 Pro"
      class="product-card__image"
      src="/iphone.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductCard test should render product without image correctly 1`] = `
<DocumentFragment>
  <div
    class="product-card"
  >
    <div
      class="product-card__text"
    >
      <h2
        class="product-card__name"
      >
        Костюм гуся
      </h2>
      <div
        class="product-card__description"
      >
        Запускаем гуся, работяги
      </div>
      <h1
        class="product-card__price"
      >
        1 000 ₽
      </h1>
      <div
        class="product-card__category"
      >
        Одежда
      </div>
    </div>
  </div>
</DocumentFragment>
`;
